# coldly

./: .README.md  .env.example  .gitignore  Cargo.toml  README.md
docs/: how-to-get-env-variables.md
src/: config.rs  main.rs  models.rs
src/services/: csv.rs  email.rs  file_service.rs  mod.rs
src/templates/: email_subject.txt  email_template.txt
