[package]
name = "coldly"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
config = "0.13"
csv = "1.3"
actix-multipart = "0.6"
futures = "0.3"
tempfile = "3.8"
mime = "0.3.17"
lettre = { version = "0.11", features = ["builder", "tokio1-native-tls"] } 